--- a/style.css
+++ b/style.css
@@ -53,20 +53,20 @@ h1 {
    text-transform: uppercase;
   background-image: linear-gradient(
     -225deg,
-    #231557 0%,
-    #44107a 29%,
-    #ff1361 67%,
-    #fff800 100%
+    #095802 0%,
+    #297a10 29%,
+    #5c915b 67%,
+    #ffffff 100%
   );
   background-size: auto auto;
   background-clip: border-box;
   background-size: 200% auto;
-  color: #fff;
+  color: rgb(21, 21, 36);
   background-clip: text;
-  text-fill-color: transparent;
+ /* text-fill-color: transparent;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: textclip 2s linear 2;
+  -webkit-text-fill-color: transparent; */
+  animation: textclip 2s linear 8;
   display: inline-block;
       font-size: 190px;
 }
